# east_text_detector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: east-text-detector-ci.yml  east_text_detecrtor_ci.yml  python-app.yml
east_text_detector/: demo.py  demo_view.py
tests/: test_demo.py
